<resources>
    <string name="app_name">FoodCity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email_txt">Email</string>
    <string name="mobile_number_txt">Mobile Number</string>
    <string name="name_txt">Name</string>
    <string name="password_txt">Password</string>
    <string name="register_txt">Register</string>


    <string name="cat_prompt">Choose a category</string>

    <string-array name="cat_array">
        <item>Vegetable</item>
        <item>Meat</item>
        <item>Fish</item>
        <item>Fruit</item>
        <item>Diary</item>
        <item>Soft Drink</item>
        <item>Liquor</item>
        <item>Other Drinks</item>
        <item>Grocery</item>
        <item>Bakery</item>
        <item>Other</item>
    </string-array>
</resources>
