<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context="com.foodcityapp.esa.foodcityapplication.RegisterActivity"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="81dp">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nameTxtReg"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/imageBtnReg"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/name_txt"
                    android:inputType="textPersonName"
                    android:padding="5dp" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/emailTxtReg"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/nameTxtReg"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:hint="@string/email_txt"
                    android:inputType="textEmailAddress"
                    android:padding="5dp" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/mobileTxtReg"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/emailTxtReg"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:hint="@string/mobile_number_txt"
                    android:inputType="phone"
                    android:padding="5dp" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passTxtReg"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/mobileTxtReg"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/password_txt"
                    android:inputType="textPassword"
                    android:padding="5dp" />

                <Button
                    android:id="@+id/regBtn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/passTxtReg"
                    android:layout_marginTop="21dp"
                    android:text="@string/register_txt" />

                <ImageButton
                    android:id="@+id/imageBtnReg"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/input_outline"
                    android:contentDescription=""
                    android:padding="2dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@android:drawable/ic_menu_add" />

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
